--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@elizaos/plugin-google-genai": "^1.0.2",
     "@elizaos/plugin-sql": "1.5.8",
     "@elizaos/server": "1.5.8",
+    "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.29.0",
+    "@vitejs/plugin-react-swc": "^4.1.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
